[tool.poetry]
name = "android-info"
version = "0.1.0"
description = "Get latest Android versions, permissions, and API-Permission mappings"
authors = ["XFY9326 <xfy9326@qq.com>"]
license = "MIT"
readme = "README.md"

[virtualenvs]
create = true
in-project = true
ignore-conda-env = true

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
tqdm = "^4.66.5"
lxml = "^5.3.0"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"
aioshutil = "^1.5"
dataclasses-json = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
